# tokioai-mirror

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_ES.md  coffee_ui.py  docker-compose.cloud.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh  telegram_quick_cmds.py
demo/: README.md  attack_demo.sh
docs/: HOME-ASSISTANT.md  HOME-ASSISTANT_ES.md  ROBOTICS.md  TAILSCALE-MESH.md  TAILSCALE-MESH_ES.md
hackzine/: HACKZINE_VOL1.md  HACKZINE_VOL1.txt
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_common.py  test_db.py  test_document_tools.py  test_error_learner.py  test_executor.py  test_llm_factory.py  test_registry.py  test_security.py  test_watchdog.py  test_workspace.py
tokio_agent/: __init__.py  cli.py  setup_wizard.py
tokio_cli/: __init__.py  __main__.py  interactive.py  interactive.py.backup  interactive.py.backup2  interactive.py.backup_v22  interactive.py.backup_v31  interactive_v3.3_backup.py  interactive_v4.py  tokio_ops.py  upgrade_cli_v4.sh
tokio_raspi/: DRONE_SETUP.md  __init__.py  __main__.py  adaptive_defense.py  ai_brain.py  api_server.py  autostart.sh  ble_security_monitor.py  coco_labels.py  coffee_esphome.py  demo_flight.py  deploy.sh  drone_fpv.py  drone_safety_proxy.py  drone_tracker.py  drone_vision.py  event_store.py  face_db.py  face_identifier.py  faces.db  gesture_detector.py  ha_feed.py  health_alerts.py  health_db.py  health_monitor.py  main.py  mavlink_drone.py  picar_proxy.py  security_feed.py  stand_mode.py  start.sh  thought_log.py  tokio_face.py  (+6 more)
(+145 files in other folders)
